--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,7 +13,8 @@
     "mo-js": "^0.288.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-globe.gl": "^2.27.4"
+    "react-globe.gl": "^2.27.4",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
