--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
-back-end/node_modules
+/back-end/node_modules
+/back-end/spotify-web-test/node_modules
+*/node_modules
 # testing
 /coverage
 
@@ -13,6 +15,7 @@ back-end/node_modules
 
 # misc
 .DS_Store
+
 .env.local
 .env.development.local
 .env.test.local
@@ -24,4 +27,5 @@ yarn-error.log*
 
 
 back-end/.env
+back-end/spotify-web-test/.env
 back-end/spotify-web-test/countryArtistDict.json
